Edit Repo Config
Change-Id: I799642d55667287a1380d7a173a3c6468048b08a

--- a/project.config
+++ b/project.config
@@ -1,24 +1,19 @@
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = GerritForge/gerrit-enterprise-projects
 [submit]
 [project]
 	description = Global ref-db based on AWS's DynamoDb
+[project]
+	description = aws-dynamodb-refdb support for Gerrit Code Review
 [access "refs/*"]
-	owner = group user/GerritForge Ltd (gerritforge-ltd)
+	owner = group GerritForge-aws-dynamodb-refdb
 	owner = group user/Luca Milanesio (lucamilanesio)
-[access "refs/for/refs/*"]
-	label-Code-Review = -2..+2 group user/GerritForge Ltd (gerritforge-ltd)
-	label-Verified = -1..+1 group user/GerritForge Ltd (gerritforge-ltd)
-	push = group user/GerritForge Ltd (gerritforge-ltd)
-	read = group user/GerritForge Ltd (gerritforge-ltd)
-	rebase = group user/GerritForge Ltd (gerritforge-ltd)
-	removeReviewer = group user/GerritForge Ltd (gerritforge-ltd)
-	submit = group user/GerritForge Ltd (gerritforge-ltd)
-[access "refs/heads/*"]
-	create = group user/GerritForge Ltd (gerritforge-ltd)
-	push = +force group user/GerritForge Ltd (gerritforge-ltd)
-	pushMerge = group user/GerritForge Ltd (gerritforge-ltd)
-	read = group user/GerritForge Ltd (gerritforge-ltd)
+	label-Code-Review = -2..+2 group GerritForge-aws-dynamodb-refdb
+	label-Verified = -1..+1 group GerritForge-aws-dynamodb-refdb
+	push = group user/Luca Milanesio (lucamilanesio)
+	rebase = group GerritForge-aws-dynamodb-refdb
+	removeReviewer = group GerritForge-aws-dynamodb-refdb
+	submit = group GerritForge-aws-dynamodb-refdb
 [access "refs/tags/*"]
-	push = group user/GerritForge Ltd (gerritforge-ltd)
-	push = +force group user/GerritForge Ltd (gerritforge-ltd)
+	push = group user/Luca Milanesio (lucamilanesio)
+	push = +force group user/Luca Milanesio (lucamilanesio)
