Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,6 +5,7 @@
 	description = Global ref-db based on AWS's DynamoDb
 [access "refs/*"]
 	owner = group user/GerritForge Ltd (gerritforge-ltd)
+	owner = group user/Luca Milanesio (lucamilanesio)
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/GerritForge Ltd (gerritforge-ltd)
 	label-Verified = -1..+1 group user/GerritForge Ltd (gerritforge-ltd)
